# CLAID_1

./: .gitignore  Dockerfile  README.md  celeryconfig.py  manage.py  pyproject.toml  requirements.txt
CLAID/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
article/: models.py  serializers.py  tests.py  urls.py  views.py
article/migrations/: 0001_initial.py  0002_article_hits.py  0002_initial.py  0003_alter_article_hits.py  0004_alter_article_hits.py  0005_hitscount.py  0006_hitscount_expire_date.py
separator/: apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
templates/: email_active.html  email_signup_message.html
user/: admin.py  models.py  serializers.py  signals.py  tests.py  tokens.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_user_login_type.py
